# investment-management

./: README.md  SKILL.md
.control/: policy.yaml
.github/workflows/: tradingview-bridge.yml
services/tradingview-bridge/: .env.example  README.md  pyproject.toml
services/tradingview-bridge/.control/: policy.yaml
services/tradingview-bridge/src/tradingview_bridge/: app.py  dispatch.py  schemas.py  settings.py
services/tradingview-bridge/tests/: conftest.py  test_dispatch.py  test_webhook_smoke.py
